--- a/JwtAuthSample/appsettings.json
+++ b/JwtAuthSample/appsettings.json
@@ -8,6 +8,6 @@
 "JwtSettings":{
   "Audience":"http://localhost:5000",
   "Issuer":"http://localhost:5000",
-  "Secretkey":"HelloKey"
+  "Secretkey":"HelloKeyhello,hello,hello"
 }
 }
